# rsieve

./: .gitignore  Cargo.toml  README.md  RELEASE_CHECKLIST.md
.github/workflows/: build.yml  lint.yml  main.yml  pr.yml  test.yml
npm/: README.md  binary.js  npm-shrinkwrap.json  package-lock.json  package.json
src/: app.rs  directories.rs  downloaders.rs  errors.rs  git.rs  main.rs  placeholders.rs  repos.rs  tree.rs
tests/integration/: main.rs
tests/sample_templates/: android.yml
