[package]
authors = ["Joslin, Brady W (Brady) <brady@bradyjoslin.com>"]
edition = "2018"
name = "rsieve"
version = "0.0.7"

[dependencies]
assert_cmd = "2.0.5"
flate2 = "1.0.24"
openssl = { version = "0.10.42", optional = true, features = ["vendored"] }
reqwest = "0.11.14"
run_script = "0.10.1"
structopt = "0.3"
tar = "0.4.38"
tokio = {version = "1.16", features = ["full"]}
regex = "1.7.0"
glob = "0.3.0"
ptree = "0.4.0"
home = "0.5.4"
console = "0.15.5"
git2 = "0.16.1"

[dev-dependencies]
assert_cmd = "2.0.5"
predicates = "2"

[features]
default = ['openssl/vendored']