[package]
authors = ["Joslin, Brady W (Brady) <brady@bradyjoslin.com>"]
edition = "2018"
name = "rsieve"
version = "0.0.8"

[dependencies]
assert_cmd = "2.0.5"
openssl = { version = "0.10.60", optional = true, features = ["vendored"] }
flate2 = "1.0.25"
reqwest = "0.12.4"
run_script = "0.10.1"
structopt = "0.3"
tar = "0.4.40"
tokio = {version = "1.16", features = ["full"]}
glob = "0.3.1"
regex = "1.7.1"
ptree = "0.4.0"
home = "0.5.4"
console = "0.15.8"
git2 = "0.18.3"

[dev-dependencies]
assert_cmd = "2.0.5"
predicates = "3.1.0"

[features]
default = ['openssl/vendored']